[project]
name = "bankkonto"
version = "0.2.0"
description = ""
authors = [
    {name = "Karol Czachorowski",email = "karol@zensum.se"}
]
requires-python = ">=3.10,<4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"
types-setuptools = "*"


[tool.poetry.dependencies]
setuptools = "*"
